--- a/src/styles/globalStyles.scss
+++ b/src/styles/globalStyles.scss
@@ -1,5 +1,5 @@
 @import './variables.scss';
-@import './flexGrid.scss';
+@import './grid.scss';
 @import './responsive.scss';
 @import './fonts.scss';
 
