--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -7,6 +7,7 @@ $--gray: #687382;
 $--gray-medium: #B5BDC8;
 $--gray-light: #EEEFF3;
 $--white: #fff;
+$--white-dark: #F5F5F7;
 $--red: #EE2740;
 
 $--bold: "Circular-Std-Bold";
